@@ -53,8 +53,6 @@ GtkType gnome_cmd_con_ftp_get_type (void);
 GnomeCmdConFtp *gnome_cmd_con_ftp_new (const gchar *alias, const std::string &uri);
 GnomeCmdConFtp *gnome_cmd_con_ftp_new (const gchar *alias, const gchar *host, guint port, const gchar *user, const gchar *password, const gchar *remote_dir);
 
-void gnome_cmd_con_ftp_set_alias (GnomeCmdConFtp *fs, const gchar *alias);
-
 void gnome_cmd_con_ftp_set_host_name (GnomeCmdConFtp *fs, const gchar *host_name);
 
 void gnome_cmd_con_ftp_set_host_port (GnomeCmdConFtp *fs, gushort host_port);
